compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_opaque_ty_outside_module.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "module k\n    export opaque ~.* t, f\n\n    type t : int\n\n    fcn f() : t loop end loop end f\nend k\n\nvar a : t\nvar b := k.f()\nvar c : k.t\n"
---
"k"@"src/main.t:7..8" [Module(No)]: <error>
"t"@"src/main.t:46..47" [Type]: opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"f"@"src/main.t:63..64" [Subprogram(Function)]: function ( ) -> opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"a"@"src/main.t:102..103" [ConstVar(Var, No)]: opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"b"@"src/main.t:112..113" [ConstVar(Var, No)]: opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"c"@"src/main.t:127..128" [ConstVar(Var, No)]: opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"t"@"src/main.t:31..32" [Export]: opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"f"@"src/main.t:34..35" [Export]: function ( ) -> opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
