compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_opaque_ty_poke_opaque_constvar.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "module m\n    export opaque t, ~.* a\n    type t : char\n\n    var a : t := 'c'\nend m\n\n% Hidden type shouldn't be leaked\nvar b := a\nb := 'c'\n"
---
"m"@(FileId(1), 7..8) [Module(No)]: <error>
"t"@(FileId(1), 45..46) [Type]: opaque[DefId(PackageId(0), LocalDefId(1))] type to char
"a"@(FileId(1), 63..64) [ConstVar(Var, No)]: opaque[DefId(PackageId(0), LocalDefId(1))] type to char
"b"@(FileId(1), 121..122) [ConstVar(Var, No)]: opaque[DefId(PackageId(0), LocalDefId(1))] type to char
"t"@(FileId(1), 27..28) [Export]: opaque[DefId(PackageId(0), LocalDefId(1))] type to char
"a"@(FileId(1), 34..35) [Export]: opaque[DefId(PackageId(0), LocalDefId(1))] type to char
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 130..132): mismatched types
| note for (FileId(1), 133..136): this is of type `char`
| note for (FileId(1), 128..129): this is of type `t (an opaque type)`
| info: `char` is not assignable into `t (an opaque type)`
