compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_opaque_ty_poke_opaque_deref.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "module m\n    export opaque t, a\n    type t : int\n    var a : ^t\n    var b : int := ^a\nend m\n\nvar b := m.a\n% should fail\nvar c : int := ^b\n"
---
"m"@(FileId(1), 7..8) [Module(No)]: <error>
"t"@(FileId(1), 41..42) [Type]: opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"a"@(FileId(1), 57..58) [ConstVar(Var, No)]: pointer to opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"b"@(FileId(1), 72..73) [ConstVar(Var, No)]: int
"b"@(FileId(1), 97..98) [ConstVar(Var, No)]: pointer to opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"c"@(FileId(1), 124..125) [ConstVar(Var, No)]: int
"t"@(FileId(1), 27..28) [Export]: opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"a"@(FileId(1), 30..31) [Export]: pointer to opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 135..137: mismatched types
| note in file FileId(1) for 135..137: this is of type `t (an opaque type)`
| note in file FileId(1) for 128..131: this is of type `int`
| info: `t (an opaque type)` is not assignable into `int`
