compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_opaque_ty_poke_opaque_name.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "module m\n    export opaque t, a, ~.* b\n    type t : int\n\n    var a : t\n    var b := a\n    a := 2\nend m\n\n% It's fine if `b` leaks the hidden type\nvar c : int := b\n"
---
"m"@"src/main.t:7..8" [Module(No)]: <error>
"t"@"src/main.t:48..49" [Type]: opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"a"@"src/main.t:65..66" [ConstVar(Var, No)]: opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"b"@"src/main.t:79..80" [ConstVar(Var, No)]: alias[DefId(PackageId(0), LocalDefId(1))] of int
"c"@"src/main.t:149..150" [ConstVar(Var, No)]: int
"t"@"src/main.t:27..28" [Export]: opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"a"@"src/main.t:30..31" [Export]: opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"b"@"src/main.t:37..38" [Export]: alias[DefId(PackageId(0), LocalDefId(1))] of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
