compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_opaque_ty_poke_opaque_result.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "module m\n    export opaque ~.* t\n    type t : int\n\n    % should be equivalent\n    fcn f() : t result 2 end f\nend m\n\n% should fail\nfcn k() : t result 2 end k\n"
---
"m"@(FileId(1), 7..8) [Module(No)]: <error>
"t"@(FileId(1), 42..43) [Type]: opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"f"@(FileId(1), 86..87) [Subprogram(Function)]: function ( ) -> opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"k"@(FileId(1), 134..135) [Subprogram(Function)]: function ( ) -> opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"<unnamed>"@(dummy) [Undeclared]: <error>
"t"@(FileId(1), 31..32) [Export]: opaque[DefId(PackageId(0), LocalDefId(1))] type to int
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 149..150: mismatched types
| note in file FileId(1) for 149..150: this is of type `{integer}`
| note in file FileId(1) for 140..141: function expects type `t (an opaque type)`
| info: `{integer}` is not assignable into `t (an opaque type)`
